# svg_optimizer

./: .gitignore  CHANGELOG.md  MANIFEST.in  PLANNING.md  PUBLISHING.md  PYPI_CHECKLIST.md  PYPI_SETUP.md  README.md  main.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  setup.py  ssim_tester.py  svg_optimize.py  test_noise.py  test_potrace.py  test_trace.py  verify_package.py
svg_optimizer/: __init__.py  __main__.py  cli.py  config.py  image_analysis.py  image_comparer.py  image_upscaler.py  inkscape_wrapper.py  parameter_optimizer.py  potrace_tracer.py  py.typed  utils.py  visual_logger.py
svg_optimizer/upscalers/: __init__.py  base.py  lanczos.py  realesrgan.py  waifu2x.py
